@@ -7,6 +7,32 @@
   <selenium.version>3.6.0</selenium.version>
   <tesng.version>6.11</tesng.version>
   </properties>
+  <build>
+   <plugins>
+    <plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.18.1</version>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <forkCount>3</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <includes>
+                                <includesFile>**/*Test.java</includesFile>
+                            </includes>
+                        </configuration>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+    </plugins>
+   </build>
   <dependencies>
   	<dependency>
   		<groupId>org.seleniumhq.selenium</groupId>
